# rofi-todo

./: Cargo.toml  flake.nix  package.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  lib.rs  task.rs  task_file.rs
