[package]
name = "rofi-todo"
description = "A rofi mode for todo.sh"
license = "MIT"
readme = "README.md"
keywords = ["rofi", "todo.sh", "todo.txt"]
categories = ["desktop-application"]
repository = "https://github.com/cyl3x/rofi-todo"
authors = ["cyl3x <cyl3x@posteo.de>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
env_logger = "0.11.6"
envy = "0.4.2"
hex_color = { version = "3.0.0", features = ["serde"] }
log = "0.4.27"
rofi-mode = "0.4.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
strum = { version = "0.27.1", features = ["derive"] }
todo-txt = "4.1.1"
